# fastapi-docker-task-api

./: Makefile  docker-compose.yml  readme.md
fastapi-docker-app/: .gitignore  Dockerfile  pyproject.toml
fastapi-docker-app/alembic/: env.py
fastapi-docker-app/alembic/versions/: db7e00004c6d_initial_migration.py
fastapi-docker-app/app/: crud.py  database.py  main.py  models.py  schemas.py
fastapi-docker-app/tests/: test_main.py
